--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <input type="checkbox" id="cart">
     <label for="cart" class="label-cart"><span class="fas fa-shopping-cart"></span></label> 
 
-    <h3 class="logo">Food delivary Services</h3>
+    <h3 class="logo">MOS Burgers</h3>
 
     <!--slide bar-->
     <div class="slidebar">
