add menu and order menu

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             <img src="images/burger-promo.jpeg">
             <div class="banner-promo">
                 <h1><span>50% OFF</span><br>
-                Tastyy Food <br> On Your Hand </h1>
+                Tasty Food <br> On Your Hand </h1>
             </div>
         </div>
         <h3 class="dashboard-title">Recommend Food For You</h3>
@@ -54,6 +54,95 @@
             <a href="#">Top Rated</a>
             <a href="#">All</a>
         </div>
+        <div class="dashboard-content">
+            <div class="dashboard-card">
+                <img class="card-image" src="images/cheese-burger.jpg">
+                <div class="card-detail">
+                    <h4>Cheese Burger<span>RS : 1000.00</span></h4>
+                    <p>Cheese Burger (Large) </p>
+                    <p class="card-time"><span class="fas fa-clock">15-30 mins</span></p>
+                </div>
+            </div>
+            <div class="dashboard-card">
+                <img class="card-image" src="images/chiken-burger.jpeg">
+                <div class="card-detail">
+                    <h4>Chicken Burger<span>RS : 1400.00</span></h4>
+                    <p>Chicken Burger (Large) </p>
+                    <p class="card-time"><span class="fas fa-clock">15-30 mins</span></p>
+                </div>
+            </div>
+            <div class="dashboard-card">
+                <img class="card-image" src="images/Double-Cheese-Burger.jpg">
+                <div class="card-detail">
+                    <h4>Double-Cheese Burger<span>RS : 1250.00</span></h4>
+                    <p>Double-Cheese Burger</p>
+                    <p class="card-time"><span class="fas fa-clock">15-30 mins</span></p>
+                </div>
+            </div>
+            <div class="dashboard-card">
+                <img class="card-image" src="images/Special Horgie Submarine.jpg">
+                <div class="card-detail">
+                    <h4>Special Horgie Submarine<span>RS : 2800.00</span></h4>
+                    <p>Special Horgie Submarine</p>
+                    <p class="card-time"><span class="fas fa-clock">15-30 mins</span></p>
+                </div>
+            </div>
+            <div class="dashboard-card">
+                <img class="card-image" src="images/Creamy Shrimp Pasta.jpeg">
+                <div class="card-detail">
+                    <h4>Creamy Shrimp Pasta<span>RS : 2000.00</span></h4>
+                    <p>Creamy Shrimp Pasta</p>
+                    <p class="card-time"><span class="fas fa-clock">15-30 mins</span></p>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!--main dashboard-->
+    <div class="dashboard-order">
+        <h3>Order Menu</h3>
+        <div class="order-address">
+            <p>No:111111</p>
+            <h4>Table : 22</h4>
+        </div>
+        <div class="order-time">
+            <span class="fas fa-clock"></span> 30 min 
+        </div>
+
+        <div class="order-wrapper">
+            <div class="order-card">
+                <img class="order-image" src="images/cheese-burger.jpg">
+                <div class="order-detail">
+                    <p>Cheese Burger</p>
+                    <i class="fas fa-times"></i> <input type="text" value="1">
+                </div>
+                <h4 class="order-price">Rs:1000.00</h4>
+            </div>
+            <div class="order-card">
+                <img class="order-image" src="images/Creamy Shrimp Pasta.jpeg">
+                <div class="order-detail">
+                    <p>Creamy Shrimp Pasta</p>
+                    <i class="fas fa-times"></i> <input type="text" value="1">
+                </div>
+                <h4 class="order-price">Rs:2000.00</h4>
+            </div>
+            <div class="order-card">
+                <img class="order-image" src="images/Special Horgie Submarine.jpg">
+                <div class="order-detail">
+                    <p>Special Horgie Submarine</p>
+                    <i class="fas fa-times"></i> <input type="text" value="1">
+                </div>
+                <h4 class="order-price">Rs:2800.00</h4>
+            </div>
+        </div>
+
+        <hr class="divider">
+        <div class="order-total">
+            <p>Subtotal <span>Rs:5800.00</span></p>
+            <p>Tax(10%) <span>Rs:580.00</span></p>
+            <p>Delivery <span>Free</span></p>
+        </div>
+
     </div>
 
 </body>
