add checkout and others

--- a/index.html
+++ b/index.html
@@ -1,18 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <link rel="stylesheet" href="style.css">
-    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP&display=swap"rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
     <title>MOS Burgers</title>
 </head>
+
 <body>
     <!--header-->
     <input type="checkbox" id="cart">
-    <label for="cart" class="label-cart"><span class="fas fa-shopping-cart"></span></label> 
+    <label for="cart" class="label-cart"><span class="fas fa-shopping-cart"></span></label>
 
     <h3 class="logo">MOS Burgers</h3>
 
@@ -42,7 +44,7 @@
             <img src="images/burger-promo.jpeg">
             <div class="banner-promo">
                 <h1><span>50% OFF</span><br>
-                Tasty Food <br> On Your Hand </h1>
+                    Tasty Food <br> On Your Hand </h1>
             </div>
         </div>
         <h3 class="dashboard-title">Recommend Food For You</h3>
@@ -106,7 +108,7 @@
             <h4>Table : 22</h4>
         </div>
         <div class="order-time">
-            <span class="fas fa-clock"></span> 30 min 
+            <span class="fas fa-clock"></span> 30 min
         </div>
 
         <div class="order-wrapper">
@@ -141,9 +143,19 @@
             <p>Subtotal <span>Rs:5800.00</span></p>
             <p>Tax(10%) <span>Rs:580.00</span></p>
             <p>Delivery <span>Free</span></p>
+
+            <div class="order-promo">
+                <input class="input-promo" type="text" placeholder="Apply Discount">
+                <button class="button-promo">Find Promo</button>
+            </div>
+            <hr class="divider">
+            <p>Total <span>Rs : 63080.00</span></p>
         </div>
-
+        <button class="checkout">
+            Checkout
+        </button>
     </div>
-
+    
 </body>
+
 </html>
