--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <label for="cart" class="label-cart"><span class="fas fa-shopping-cart"></span></label>
 
     <h3 class="logo">MOS Burgers</h3>
+    <a href="register.html" class=" addCust"><h3>Add Customer</h3></a>
 
     <!--slide bar-->
     <div class="slidebar">
@@ -155,7 +156,205 @@
             Checkout
         </button>
     </div>
-    
+
+    <main class="table" id="customers_table">
+        <section class="table__header">
+            <h1>MOS Burger Iteams</h1>
+        </section>
+        <center>
+            <h2>Burgers</h2>
+        </center>
+        <section class="table__body">
+            <table>
+                <thead>
+                    <tr>
+                        <th> Item Code <span class="icon-arrow">&UpArrow;</span></th>
+                        <th> Item Name <span class="icon-arrow">&UpArrow;</span></th>
+                        <th> Price (LKR) <span class="icon-arrow">&UpArrow;</span></th>
+                        <th> Discount <span class="icon-arrow">&UpArrow;</span></th>
+                        <th> # </th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td> B1001 </td>
+                        <td> <img src="images/cheese-burger.jpg" alt="">Classic Burger (Large) </td>
+                        <td> 750.00</td>
+                        <td> - </td>
+                        <td> <a href="#">ADD</a></td>
+                    </tr>
+                    <tr>
+                        <td> B1002 </td>
+                        <td> <img src="images/cheese-burger.jpg" alt="">Classic Burger (Regular) </td>
+                        <td> 1500.00</td>
+                        <td> 15%</td>
+                        <td> <a href="#">ADD</a></td>
+                    </tr>
+                    <tr>
+                        <td> B1003 </td>
+                        <td> <img src="images/chiken-burger.jpeg" alt="">Chicken Burger (Large) </td>
+                        <td> 1400.00 </td>
+                        <td> -</td>
+                        <td> <a href="#">ADD</a></td>
+                    </tr>
+                    <tr>
+                        <td> B1004 </td>
+                        <td> <img src="images/chiken-burger.jpeg" alt="">Chicken Burger (Regular) </td>
+                        <td> 800.00 </td>
+                        <td> 20%</td>
+                        <td> <a href="#">ADD</a></td>
+                    </tr>
+                    <tr>
+                        <td> B1005 </td>
+                        <td> <img src="images/Double-Cheese-Burger.jpg" alt="">Double-Cheese Burger</td>
+                        <td> 1250.00 </td>
+                        <td> 20%</td>
+                        <td> <a href="#">ADD</a></td>
+                    </tr>
+
+                </tbody>
+            </table>
+        </section>
+
+        <center>
+            <h2>Submarines</h2>
+        </center>
+        <section class="table__body">
+            <table>
+                <thead>
+                    <tr>
+                        <th> Item Code <span class="icon-arrow">&UpArrow;</span></th>
+                        <th> Item Name <span class="icon-arrow">&UpArrow;</span></th>
+                        <th> Price (LKR) <span class="icon-arrow">&UpArrow;</span></th>
+                        <th> Discount <span class="icon-arrow">&UpArrow;</span></th>
+                        <th> # </th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td> B1006 </td>
+                        <td> <img src="images/Special Horgie Submarine.jpg" alt="">Special Horgie Submarine</td>
+                        <td> 2800.00</td>
+                        <td> - </td>
+                        <td> <a href="#">ADD</a></td>
+                    </tr>
+
+                </tbody>
+            </table>
+        </section>
+
+        <center>
+            <h2>Fries</h2>
+        </center>
+        <section class="table__body">
+            <table>
+                <thead>
+                    <tr>
+                        <th> Item Code <span class="icon-arrow">&UpArrow;</span></th>
+                        <th> Item Name <span class="icon-arrow">&UpArrow;</span></th>
+                        <th> Price (LKR) <span class="icon-arrow">&UpArrow;</span></th>
+                        <th> Discount <span class="icon-arrow">&UpArrow;</span></th>
+                        <th> # </th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td> B1007 </td>
+                        <td> <img src="" alt="">Steak Fries (Large)</td>
+                        <td> 1200.00</td>
+                        <td> - </td>
+                        <td> <a href="#">ADD</a></td>
+                    </tr>
+
+                </tbody>
+            </table>
+        </section>
+
+        <center>
+            <h2>Pasta</h2>
+        </center>
+        <section class="table__body">
+            <table>
+                <thead>
+                    <tr>
+                        <th> Item Code <span class="icon-arrow">&UpArrow;</span></th>
+                        <th> Item Name <span class="icon-arrow">&UpArrow;</span></th>
+                        <th> Price (LKR) <span class="icon-arrow">&UpArrow;</span></th>
+                        <th> Discount <span class="icon-arrow">&UpArrow;</span></th>
+                        <th> # </th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td> B1008 </td>
+                        <td> <img src="images/Creamy Shrimp Pasta.jpeg" alt="">Creamy Shrimp Pasta </td>
+                        <td> 2000.00</td>
+                        <td> - </td>
+                        <td> <a href="#">ADD</a></td>
+                    </tr>
+
+                </tbody>
+            </table>
+        </section>
+
+        <center>
+            <h2>Chicken</h2>
+        </center>
+        <section class="table__body">
+            <table>
+                <thead>
+                    <tr>
+                        <th> Item Code <span class="icon-arrow">&UpArrow;</span></th>
+                        <th> Item Name <span class="icon-arrow">&UpArrow;</span></th>
+                        <th> Price (LKR) <span class="icon-arrow">&UpArrow;</span></th>
+                        <th> Discount <span class="icon-arrow">&UpArrow;</span></th>
+                        <th> # </th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td> B1009 </td>
+                        <td> <img src="" alt="">Fried Chicken (Regular) </td>
+                        <td> 2300.00</td>
+                        <td> 10% </td>
+                        <td> <a href="#">ADD</a></td>
+                    </tr>
+
+                </tbody>
+            </table>
+        </section>
+
+        <center>
+            <h2>Beverages</h2>
+        </center>
+        <section class="table__body">
+            <table>
+                <thead>
+                    <tr>
+                        <th> Item Code <span class="icon-arrow">&UpArrow;</span></th>
+                        <th> Item Name <span class="icon-arrow">&UpArrow;</span></th>
+                        <th> Price (LKR) <span class="icon-arrow">&UpArrow;</span></th>
+                        <th> Discount <span class="icon-arrow">&UpArrow;</span></th>
+                        <th> # </th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td> B1010 </td>
+                        <td> <img src="" alt="">Sprite (330ml) </td>
+                        <td> 1500.00</td>
+                        <td> 3% </td>
+                        <td> <a href="#">ADD</a></td>
+                    </tr>
+
+                </tbody>
+            </table>
+        </section>
+    </main>
+
+
+
+
 </body>
 
 </html>
